Exercise 8.3 Throws and Throw